--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-* { margin: 0; }
+* { margin: 0;  }
 
 html{
     scroll-behavior: smooth;
@@ -6,6 +6,30 @@ html{
 body{
     overflow-x: hidden;
     position: relative;
+}
+#rocket{
+    width: 7%;
+    position: absolute;
+    top: 50%
+}
+.logo{
+    position: absolute;
+    width: 10%;
+    z-index: 999;
+}
+#jslogo{
+    position: absolute;
+    left:50%;
+    top: 4%;
+}
+#htmllogo{
+    position: absolute;
+    right: 0%;
+    top: 18%;
+}
+#csslogo{
+    position: absolute;
+    top: 18%;
 }
 #top_bar{
     position: relative;
@@ -77,7 +101,7 @@ body{
     width: 35%;
     height: 35%;
     background-color: #040455;
-    box-shadow: -1px 1px 5px 9px rgba(255,255,255,0.65);
+    box-shadow: -1px 1px 5px 9px rgba(255,255,255,0.70);
     z-index: 999;
 }
 #me_picture{
@@ -100,8 +124,23 @@ body{
     border-radius: 5%;
 }
 #header{
+    font-size: 250%;
     position: absolute;
     top: 5%;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 5%;
+}
+#under{
+    position:absolute;
+    top: 13%;
+    left: 5%;
+}
+#h_2{
+    position:absolute;
+    top: 17%;
+    left: 5%;
+}
+#main_text{
+    position:absolute;
+    top: 24%;
+    left: 5%;
 }
