--- a/css/index.css
+++ b/css/index.css
@@ -40,14 +40,14 @@ body{
     position: relative;
     display: flex;
     justify-content: flex-end;
-    width:100%;
+    width:100vw;
     height:5vw;
     background-color: black;
 }
 #main_top{
 
-    width:100%;
-    height:100vw;
+    width:100vw;
+    height:200vh;
     background: #020024;
     background: linear-gradient(180deg,rgba(2, 0, 0, 1) 0%, rgba(9, 9, 121, 1) 80%, rgba(0, 192, 245, 1) 100%);
 }
