--- a/css/index.css
+++ b/css/index.css
@@ -109,6 +109,7 @@ body{
     width: 35%;
     height: 35%;
     background-color: #040455;
+    outline: 1px solid rgba(255,255,255,0.20);
     box-shadow: -1px 1px 5px 9px rgba(255,255,255,0.70);
     z-index: 999;
 }
@@ -207,6 +208,9 @@ body{
         font-size: 1.75vw;
         word-wrap: break-all;
     }
+    .portfolio{
+        margin: auto;
+    }
 }
 @media (min-width: 500px) and (max-width: 1025px){
     #me_picture{
@@ -225,4 +229,72 @@ body{
         font-size: 1.25vw;
         word-wrap: break-all;
     }
+}
+
+#project_div{
+    display: flex;
+    position: absolute;
+
+    background-color: #040455;
+    border-radius: 5%;
+
+    top: 110vh;
+    left: 17.5vw;
+    width: 65vw;
+    height: 60vh;
+
+    outline: 1px solid rgba(255,255,255,0.70);
+    box-shadow: -1px 1px 5px 9px rgba(255,255,255,0.70);
+
+    z-index: 3;
+
+}
+
+.portfolio{
+    margin: 5vh;
+    margin-top: 10vh;
+    width: 20vw;
+    height: 75%;
+    outline: 1px solid rgba(255,255,255,0.70);
+    box-shadow: 0px 2px 5px 9px rgba(255,255,255,0.70);
+}
+#projects_text{
+    position: absolute;
+    left:50%;
+    transform: translateX(-50%);
+    color:white;
+}
+.project_1_desc{
+    background-color: rgba(9, 9, 121, 1);
+    margin-top: 0%;
+    position: relative;
+    outline: 1px solid white;
+    width: 100%;
+    height: 55%;
+}
+.primg1{
+    position: relative;
+    width: 100%;
+}
+.pro_h{
+    text-align: center;
+    color: white;
+}
+.github_button{
+    position:relative;
+    top: 65%;
+    left:50%;
+    transform: translateX(-50%);
+    outline: 1px solid white;
+    width: 15%;
+    height: 15%;
+    background-color: #040455;
+    color:white;
+    border-radius: 0;
+}
+.github_icon{
+    position: relative;
+    height: 100%;
+    width: 100%;
+    margin:auto;
 }
