--- a/css/index.css
+++ b/css/index.css
@@ -234,13 +234,16 @@ body{
 #project_div{
     display: flex;
     position: absolute;
-
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
     background-color: #040455;
     border-radius: 5%;
 
     top: 110vh;
-    left: 17.5vw;
-    width: 65vw;
+    left: 50vw;
+    transform: translateX(-50%);
+    width: 75vw;
     height: 60vh;
 
     outline: 1px solid rgba(255,255,255,0.70);
@@ -251,12 +254,14 @@ body{
 }
 
 .portfolio{
+    position: relative;
+    box-shadow: -1px 1px 5px 9px rgba(255,255,255,0.70);
     margin: 5vh;
-    margin-top: 10vh;
-    width: 20vw;
+    margin-top: 8vh;
+    width: 15vw;
     height: 75%;
-    outline: 1px solid rgba(255,255,255,0.70);
-    box-shadow: 0px 2px 5px 9px rgba(255,255,255,0.70);
+    outline: 1px solid rgba(0,255,255,0.70);
+    text-shadow: 0 5px 3px rgba(0, 0, 0, 0.7);
 }
 #projects_text{
     position: absolute;
@@ -269,11 +274,13 @@ body{
     margin-top: 0%;
     position: relative;
     outline: 1px solid white;
-    width: 100%;
-    height: 55%;
+    width: 15vw;
+    height: 25vh;
+
 }
 .primg1{
     position: relative;
+    height:45%;
     width: 100%;
 }
 .pro_h{
@@ -281,7 +288,7 @@ body{
     color: white;
 }
 .github_button{
-    position:relative;
+    position:absolute;
     top: 65%;
     left:50%;
     transform: translateX(-50%);
